--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -31,7 +31,6 @@ jobs:
           echo "📅 Using season: $SEASON"
           mkdir -p tmp
 
-          # Fetch team standings to detect league
           response=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
@@ -41,7 +40,7 @@ jobs:
 
           LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
 
-          if [ -z "$LEAGUE_ID" ] || [ "$LEAGUE_ID" = "null" ]; then
+          if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
             echo "❌ Could not determine league ID. Exiting."
             cat tmp/team-response.json
             exit 1
@@ -50,7 +49,6 @@ jobs:
           echo "✅ Detected League ID: $LEAGUE_ID"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
-          echo "TEAM_ID=$TEAM_ID" >> $GITHUB_ENV
 
       - name: Fetch Last Season Standings for 3 Leagues
         run: |
@@ -72,70 +70,63 @@ jobs:
 
           echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
 
-      - name: Fetch Upcoming Fixtures for Team
+      - name: Fetch All Season Fixtures
         run: |
-          START_DATE=$(date -d "+0 days" +%Y-%m-%d)
-          END_DATE=$(date -d "+14 days" +%Y-%m-%d)
-
           FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
+            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
+          # Build next-fixtures map for update-standing compatibility
           jq -n --slurpfile f tmp/fixtures.json '
-            ($f[0].response // [])
-            | map(select(.teams.home.id == ($env.TEAM_ID|tonumber) or .teams.away.id == ($env.TEAM_ID|tonumber)))
+            $f[0].response
             | sort_by(.fixture.date)
             | reduce .[] as $fx ({}; 
-                . + {
-                  ($fx.teams.home.id|tostring): {nextUp: "\($fx.teams.away.name) (H)"},
-                  ($fx.teams.away.id|tostring): {nextUp: "\($fx.teams.home.name) (A)"}
+                . +
+                {
+                  ($fx.teams.home.id|tostring):
+                    (if has($fx.teams.home.id|tostring) then .[$fx.teams.home.id|tostring] else {nextUp: "\($fx.teams.away.name) (H)"} end),
+                  ($fx.teams.away.id|tostring):
+                    (if has($fx.teams.away.id|tostring) then .[$fx.teams.away.id|tostring] else {nextUp: "\($fx.teams.home.name) (A)"} end)
                 }
               )
           ' > tmp/next-fixtures-map.json
 
-      - name: Generate ICS for Team
+      - name: Generate Full Season ICS for Team
         run: |
           ICS_FILE=public/cal/fixtures.ics
           TEAM_ID=$(cat ./assets/teamid.txt)
 
+          mkdir -p public/cal
+
           echo "BEGIN:VCALENDAR
-          VERSION:2.0
-          PRODID:-//GitHub Actions//Football Fixtures//EN" > $ICS_FILE
+VERSION:2.0
+PRODID:-//GitHub Actions//Football Fixtures//EN" > $ICS_FILE
 
           jq -c --arg team "$TEAM_ID" '
-            .response[0].league.standings[0]
-            | map(select(.team.id == ($team|tonumber))) 
-            | .[] 
-            | .team.id as $tid
-            | ($tid | tostring) as $tid_str
-          ' tmp/team-response.json | while IFS= read -r team_data; do
-            # For each fixture
-            jq -c --arg team "$TEAM_ID" '
-              .response[]
-              | select(.teams.home.id == ($team|tonumber) or .teams.away.id == ($team|tonumber))
-            ' tmp/fixtures.json | while IFS= read -r fx; do
-              DATE=$(echo "$fx" | jq -r '.fixture.date')
-              HOME=$(echo "$fx" | jq -r '.teams.home.name')
-              AWAY=$(echo "$fx" | jq -r '.teams.away.name')
-              HOME_SCORE=$(echo "$fx" | jq -r '.goals.home // ""')
-              AWAY_SCORE=$(echo "$fx" | jq -r '.goals.away // ""')
-              VENUE=$(echo "$fx" | jq -r '.fixture.venue.name')
+.response[]
+| select(.teams.home.id == ($team|tonumber) or .teams.away.id == ($team|tonumber))
+' tmp/fixtures.json | while IFS= read -r fx; do
+            DATE=$(echo "$fx" | jq -r '.fixture.date' | xargs -I{} date -u -d {} +%Y%m%dT%H%M%SZ)
+            HOME=$(echo "$fx" | jq -r '.teams.home.name')
+            AWAY=$(echo "$fx" | jq -r '.teams.away.name')
+            HOME_SCORE=$(echo "$fx" | jq -r '.goals.home // ""')
+            AWAY_SCORE=$(echo "$fx" | jq -r '.goals.away // ""')
+            VENUE=$(echo "$fx" | jq -r '.fixture.venue.name')
 
-              if [ -n "$HOME_SCORE" ] && [ -n "$AWAY_SCORE" ]; then
-                SUMMARY="$HOME $HOME_SCORE - $AWAY_SCORE $AWAY"
-              else
-                SUMMARY="$HOME - $AWAY"
-              fi
+            if [ -n "$HOME_SCORE" ] && [ -n "$AWAY_SCORE" ]; then
+              SUMMARY="$HOME $HOME_SCORE - $AWAY_SCORE $AWAY"
+            else
+              SUMMARY="$HOME - $AWAY"
+            fi
 
-              echo "BEGIN:VEVENT
-              DTSTART:$DATE
-              SUMMARY:$SUMMARY
-              LOCATION:$VENUE
-              END:VEVENT" >> $ICS_FILE
-            done
+            echo "BEGIN:VEVENT
+DTSTART:$DATE
+SUMMARY:$SUMMARY
+LOCATION:$VENUE
+END:VEVENT" >> $ICS_FILE
           done
 
           echo "END:VCALENDAR" >> $ICS_FILE
@@ -148,5 +139,5 @@ jobs:
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, fixtures, next fixtures map, and ICS"
+            git commit -m "Update league info, standings, fixtures, and ICS"
             git push
