--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -70,77 +70,59 @@ jobs:
 
           echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
 
-      - name: Fetch Full Season Fixtures
+      - name: Fetch Team Fixtures
         run: |
+          START_DATE=$(date -d "2025-08-01" +%Y-%m-%d)  # start of season
+          END_DATE=$(date -d "+1 year" +%Y-%m-%d)
+
           FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}" \
+            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&team=${TEAM_ID}&from=${START_DATE}&to=${END_DATE}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
-          # Build next-fixtures map for compatibility with update-standings logic
-          jq -n --slurpfile f tmp/fixtures.json '
-            $f[0].response
-            | sort_by(.fixture.date)
-            | reduce .[] as $fx ({}; 
-                . +
-                {
-                  ($fx.teams.home.id|tostring):
-                    (if has($fx.teams.home.id|tostring) then .[$fx.teams.home.id|tostring] else {nextUp: "\($fx.teams.away.name) (H)"} end),
-                  ($fx.teams.away.id|tostring):
-                    (if has($fx.teams.away.id|tostring) then .[$fx.teams.away.id|tostring] else {nextUp: "\($fx.teams.home.name) (A)"} end)
-                }
-              )
-          ' > tmp/next-fixtures-map.json
-
       - name: Generate ICS for Team
         run: |
           ICS_FILE=public/cal/fixtures.ics
-          TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
+          # Start calendar safely with echo (YAML-safe)
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # Add all events for this team
-          jq -c --arg team "$TEAM_ID" '
+          # Append events for each fixture
+          jq -r --arg team_id "$TEAM_ID" '
             .response[]
-            | select(.teams.home.id == ($team|tonumber) or .teams.away.id == ($team|tonumber))
-          ' tmp/fixtures.json | while IFS= read -r fx; do
-            DATE=$(echo "$fx" | jq -r '.fixture.date' | xargs -I{} date -u -d {} +%Y%m%dT%H%M%SZ)
-            HOME=$(echo "$fx" | jq -r '.teams.home.name')
-            AWAY=$(echo "$fx" | jq -r '.teams.away.name')
-            HOME_SCORE=$(echo "$fx" | jq -r '.goals.home // ""')
-            AWAY_SCORE=$(echo "$fx" | jq -r '.goals.away // ""')
-            VENUE=$(echo "$fx" | jq -r '.fixture.venue.name')
+            | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
+            | . as $fx
+            | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
+              "\nDTSTART:" + ($fx.fixture.date | sub("[-:]";"g") | split("+")[0] | gsub("-";"") | gsub(":","") ) +
+              "\nSUMMARY:" + (
+                if $fx.teams.home.id == ($team_id|tonumber) then
+                  "\($fx.teams.home.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
+                  " vs \($fx.teams.away.name)"
+                else
+                  "\($fx.teams.away.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.away)-\($fx.goals.home)" else "" end) +
+                  " @ \($fx.teams.home.name)"
+                end
+              ) +
+              "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
+              "\nEND:VEVENT"
+          ' tmp/fixtures.json >> $ICS_FILE
 
-            if [ -n "$HOME_SCORE" ] && [ -n "$AWAY_SCORE" ]; then
-              SUMMARY="$HOME $HOME_SCORE - $AWAY_SCORE $AWAY"
-            else
-              SUMMARY="$HOME - $AWAY"
-            fi
-
-            cat <<EOV >> $ICS_FILE
-BEGIN:VEVENT
-DTSTART:$DATE
-SUMMARY:$SUMMARY
-LOCATION:$VENUE
-END:VEVENT
-EOV
-          done
-
-          # Close the calendar
           echo "END:VCALENDAR" >> $ICS_FILE
 
       - name: Commit and Push
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/league-info.json data/previous-season/ tmp/fixtures.json tmp/next-fixtures-map.json public/cal/fixtures.ics
+          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, standings, fixtures, and ICS"
+            git commit -m "Update league info, last season standings, and fixtures ICS"
             git push
