--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -31,14 +31,15 @@ jobs:
           echo "📅 Using season: $SEASON"
           mkdir -p tmp
 
-          response=$(curl -s --request GET \
+          # Get current standings for team
+          RESPONSE=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
-          echo "$response" | jq . > tmp/team-response.json
+          echo "$RESPONSE" | jq . > tmp/team-response.json
 
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
+          LEAGUE_ID=$(echo "$RESPONSE" | jq -r '.response[0].league.id')
 
           if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
             echo "❌ Could not determine league ID. Exiting."
@@ -70,35 +71,55 @@ jobs:
 
           echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
 
-      - name: Fetch Team Fixtures
+      - name: Fetch Full Season Fixtures
         run: |
-          START_DATE=$(date -d "2025-08-01" +%Y-%m-%d)  # start of season
-          END_DATE=$(date -d "+1 year" +%Y-%m-%d)
+          START_DATE=$(date -d "${SEASON}-08-01" +%Y-%m-%d)
+          END_DATE=$(date -d "${SEASON}-07-31 +1 year" +%Y-%m-%d)
 
           FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&team=${TEAM_ID}&from=${START_DATE}&to=${END_DATE}" \
+            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
+          # Map next fixture per team
+          jq -n --slurpfile f tmp/fixtures.json '
+            if ($f[0].response | length) == 0 then
+              {"TBD": {nextUp: "TBD"}}
+            else
+              $f[0].response
+              | sort_by(.fixture.date)
+              | reduce .[] as $fx ({}; 
+                  . +
+                  {
+                    ($fx.teams.home.id|tostring):
+                      {nextUp: "\($fx.teams.away.name) (H)"},
+                    ($fx.teams.away.id|tostring):
+                      {nextUp: "\($fx.teams.home.name) (A)"}
+                  }
+                )
+            end
+          ' > tmp/next-fixtures-map.json
+
       - name: Generate ICS for Team
         run: |
           ICS_FILE=public/cal/fixtures.ics
+          TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
-          # Start calendar safely with echo (YAML-safe)
+          # Start calendar safely
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # Append events for each fixture
+          # Append events for chosen team
           jq -r --arg team_id "$TEAM_ID" '
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
-              "\nDTSTART:" + ($fx.fixture.date | sub("[-:]";"g") | split("+")[0] | gsub("-";"") | gsub(":","") ) +
+              "\nDTSTART:" + ($fx.fixture.date | split("+")[0] | gsub("-";"") | gsub(":","")) +
               "\nSUMMARY:" + (
                 if $fx.teams.home.id == ($team_id|tonumber) then
                   "\($fx.teams.home.name)" +
@@ -124,5 +145,5 @@ jobs:
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, last season standings, and fixtures ICS"
+            git commit -m "Update league info, standings, fixtures ICS"
             git push
