--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -108,18 +108,16 @@ jobs:
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
-          # Start calendar safely
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # Append events for chosen team
           jq -r --arg team_id "$TEAM_ID" '
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
-              "\nDTSTART:" + ($fx.fixture.date | split("+")[0] | gsub("-";"") | gsub(":","")) +
+              "\nDTSTART:" + ($fx.fixture.date | sub("-";"") | sub("-";"") | sub(":","") | sub(":","") | split("+")[0]) +
               "\nSUMMARY:" + (
                 if $fx.teams.home.id == ($team_id|tonumber) then
                   "\($fx.teams.home.name)" +
