--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -70,36 +70,16 @@ jobs:
 
           echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
 
-      - name: Fetch Upcoming Fixtures for Team
+      - name: Fetch All Fixtures for Team
         run: |
-          START_DATE=$(date -d "+0 days" +%Y-%m-%d)
-          END_DATE=$(date -d "+365 days" +%Y-%m-%d)  # full season
           TEAM_ID=$(cat ./assets/teamid.txt)
 
           FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?team=${TEAM_ID}&season=${SEASON}" \
+            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
             --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
-
-          # Map next fixture for the team
-          jq -n --slurpfile f tmp/fixtures.json '
-            if ($f[0].response | length) == 0 then
-              {"TBD": {nextUp: "TBD"}}
-            else
-              $f[0].response
-              | sort_by(.fixture.date)
-              | reduce .[] as $fx ({}; . +
-                  {
-                    ($fx.teams.home.id|tostring):
-                      (if has($fx.teams.home.id|tostring) then .[$fx.teams.home.id|tostring] else {nextUp: "\($fx.teams.away.name) (H)"} end),
-                    ($fx.teams.away.id|tostring):
-                      (if has($fx.teams.away.id|tostring) then .[$fx.teams.away.id|tostring] else {nextUp: "\($fx.teams.home.name) (A)"} end)
-                  }
-                )
-            end
-          ' > tmp/next-fixtures-map.json
 
       - name: Generate ICS for Team
         run: |
@@ -107,7 +87,7 @@ jobs:
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
-          # Start calendar safely with echo (YAML-safe)
+          # Start calendar safely with echo
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
@@ -117,14 +97,7 @@ jobs:
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
-            | (
-                $fx.fixture.date
-                | split("T")
-                | .[0] + "T" + .[1]
-                | split("+")[0]
-                | split("-")
-                | join("")
-              ) as $dt
+            | ($fx.fixture.date | gsub("[-:]";"") | split("+")[0]) as $dt
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
               "\nDTSTART:" + $dt +
               "\nSUMMARY:" + (
@@ -152,5 +125,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update rankings, next fixture, and ICS calendar"
+            git commit -m "Update league info, standings, and fixtures ICS"
             git push
+          fi
