--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -70,13 +70,11 @@ jobs:
 
           echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
 
-      - name: Fetch Team Fixtures
+      - name: Fetch Upcoming Fixtures
         run: |
-          TEAM_ID=$(cat ./assets/teamid.txt)
-          START_DATE=$(date -d "2025-08-01" +%Y-%m-%d)  # season start
-          END_DATE=$(date -d "2026-06-30" +%Y-%m-%d)    # season end
+          START_DATE=$(date -d "+0 days" +%Y-%m-%d)
+          END_DATE=$(date -d "+365 days" +%Y-%m-%d)  # full season
 
-          mkdir -p tmp
           FIXTURES=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
@@ -90,7 +88,7 @@ jobs:
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
-          # Start calendar safely with echo
+          # Start calendar safely with echo (YAML-safe)
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
@@ -101,10 +99,11 @@ jobs:
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
             | (
-                ($fx.fixture.date | sub("\\+00:00$";"") | fromdateiso8601) + 7200  # 2-hour duration
-              ) as $end_ts
+                $fx.fixture.date + "Z" | fromdateiso8601
+              ) as $start_ts
+            | ($start_ts + 7200) as $end_ts  # 2-hour duration
             | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
-              "\nDTSTART:" + ($fx.fixture.date | sub("\\+00:00$";"") | fromdateiso8601 | strftime("%Y%m%dT%H%M%SZ")) +
+              "\nDTSTART:" + ($start_ts | strftime("%Y%m%dT%H%M%SZ")) +
               "\nDTEND:" + ($end_ts | strftime("%Y%m%dT%H%M%SZ")) +
               "\nSUMMARY:" + (
                 if $fx.teams.home.id == ($team_id|tonumber) then
@@ -112,13 +111,12 @@ jobs:
                   (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
                   " vs \($fx.teams.away.name)"
                 else
-                  "\($fx.teams.away.name)" +
-                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.away)-\($fx.goals.home)" else "" end) +
-                  " @ \($fx.teams.home.name)"
+                  "\($fx.teams.home.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
+                  " @ \($fx.teams.away.name)"
                 end
               ) +
-              "\nDESCRIPTION:" +
-                "Round: \($fx.league.round // "Unknown"), Referee: \($fx.fixture.referee // "Unknown")" +
+              "\nDESCRIPTION:Referee: " + ($fx.fixture.referee // "Unknown") +
               "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
               "\nEND:VEVENT"
           ' tmp/fixtures.json >> $ICS_FILE
@@ -129,9 +127,10 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics
+          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics tmp/fixtures.json
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, standings, and team fixtures ICS"
+            git commit -m "Update league info, standings and fixtures ICS"
             git push
+          fi
