--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -72,9 +72,9 @@ jobs:
 
       - name: Fetch Upcoming Fixtures
         run: |
-          START_DATE=$(date -d "+0 days" +%Y-%m-%d)
-          END_DATE=$(date -d "+365 days" +%Y-%m-%d)  # full season
-
+          START_DATE=$(date +%Y-%m-%d)
+          END_DATE=$(date -d "next July" +%Y-%m-%d) # full season
+          
           FIXTURES=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
@@ -88,35 +88,40 @@ jobs:
           TEAM_ID=$(cat ./assets/teamid.txt)
           mkdir -p public/cal
 
-          # Start calendar safely with echo (YAML-safe)
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
 
-          # Append events for each fixture
           jq -r --arg team_id "$TEAM_ID" '
             .response[]
             | select(.teams.home.id == ($team_id|tonumber) or .teams.away.id == ($team_id|tonumber))
             | . as $fx
             | (
-                $fx.fixture.date + "Z" | fromdateiso8601
-              ) as $start_ts
-            | ($start_ts + 7200) as $end_ts  # 2-hour duration
-            | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ")) +
-              "\nDTSTART:" + ($start_ts | strftime("%Y%m%dT%H%M%SZ")) +
-              "\nDTEND:" + ($end_ts | strftime("%Y%m%dT%H%M%SZ")) +
+                $fx.fixture.date
+                | split("+")[0]        # strip timezone
+                | split("T")
+                | .[0] as $d
+                | .[1] as $t
+                | ($d | gsub("-";"")) + "T" + ($t | gsub(":","")) + "Z"
+              ) as $dtstart
+            | (
+                ($fx.fixture.date | split("+")[0] | split("T") | .[0] | gsub("-";"")) + "T" +
+                ((($fx.fixture.date | split("+")[0] | split("T") | .[1] | gsub(":","")) | tonumber + 20000)|tostring) + "Z"
+              ) as $dtend
+            | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football\nDTSTAMP:" + (now|tostring) +
+              "\nDTSTART:" + $dtstart +
+              "\nDTEND:" + $dtend +
               "\nSUMMARY:" + (
                 if $fx.teams.home.id == ($team_id|tonumber) then
                   "\($fx.teams.home.name)" +
                   (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
                   " vs \($fx.teams.away.name)"
                 else
-                  "\($fx.teams.home.name)" +
-                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.home)-\($fx.goals.away)" else "" end) +
-                  " @ \($fx.teams.away.name)"
+                  "\($fx.teams.away.name) @ \($fx.teams.home.name)" +
+                  (if $fx.fixture.status.short=="FT" then " \($fx.goals.away)-\($fx.goals.home)" else "" end)
                 end
               ) +
-              "\nDESCRIPTION:Referee: " + ($fx.fixture.referee // "Unknown") +
+              "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD")) +
               "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown") +
               "\nEND:VEVENT"
           ' tmp/fixtures.json >> $ICS_FILE
@@ -127,10 +132,10 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics tmp/fixtures.json
+          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, standings and fixtures ICS"
+            git commit -m "Update league info, standings, and team fixtures"
             git push
           fi
